# fekan

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  flamegraph.sh
benches/: README.md  Xeon_4gen_portable_8vcpu.txt  Xeon_4gen_sapphirerapids_8vcpu.txt  Xeon_4gen_scalar_8vcpu.txt  apple_m2_8_core_no_flags.txt  apple_m2_8_core_scalar.txt  benchmark_accuracy.sh  benchmarks.rs  c7g_graviton3_8_core_feature_lse_target_neoverse.txt  c7i_Xeon4_8vcpu_4_core.txt  dhat.out.1905  dhat.out.1906  dockerfile  flamegraph.sh  generate_ellipj_data.py  generate_exp_data.py  generate_feynman_I-9-18_data.py  generate_quadratic_data.py  heap_analysis.sh  speed_stats.rs  speed_stats.txt  spot_check.sh  test_ellipj_accuracy.sh  test_feynman_I-9-18_accuracy.sh
benches/AMD_EPYC_4th_gen/: 8_core_speed_stats.txt
benches/AWS_Graviton_3/: c7g_graviton3_8_core_feature_lse.txt  c7g_graviton3_8_core_no_flags.txt  c7g_graviton3_8_core_target_neoverse.txt
benches/AWS_Graviton_4/: c8g_graviton4_8_core_feature_lse.txt  c8g_graviton4_8_core_feature_lse_target_neoverse.txt  c8g_graviton4_8_core_no_flags.txt  c8g_graviton4_8_core_target_neoverse.txt
benches/Apple_M2/: 8_core_scalar_speed_stats.txt  8_core_simd_speed_stats.txt
benches/Intel_Xeon_4th_gen/: 8_core_generic_scalar_speed_stats.txt  8_core_native_portable-simd_speed_stats.txt  8_core_native_portable_speed_stats.txt  8_core_native_scalar_speed_stats.txt  8_core_native_x86-instrinsics_speed_stats.txt  8_core_portable_simd_speed_stats.txt  8_core_scalar_speed_stats.txt  8_core_x86-instrinsics_simd_speed_stats.txt
performance_info/: benchmarks.txt
src/: embedding_layer.rs  kan.rs  kan_layer.rs  layer_errors.rs  lib.rs  main.rs  threadpool.rs  training_error.rs  training_observer.rs  training_options.rs
src/kan/: kan_error.rs  kan_layer.rs
src/kan/kan_layer/: node.rs  spline.rs
src/kan_layer/: edge.rs  kan_layer_errors.rs  mod.rs  node.rs  spline.rs
src/kan_layer/edge/: edge_errors.rs
src/kan_layer/spline/: basis_cache.rs  spline_errors.rs
tests/: classifier_sum_greater_than_zero.rs  exp_sin_pix_y_squared.rs  integration_test.rs  regressor_xy.rs  symbolification_results.ipynb  util.rs
