[package]
name = "fekan"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-pickle = "1.1.1"
statrs = "0.16.0"

[profile.release]
debug = true
