[package]
name = "fekan"
version = "0.6.3"
edition = "2021"
authors = ["John Farmer."]
license = "MIT OR Apache-2.0"
description = "A library for building and training Kolmogorov-Arnold neural networks."
repository = "https://github.com/lprekon/fekan"
keywords = ["neural-networks", "kolmogorov-arnold", "machine-learning", "ai"]
categories = ["science", "mathematics"]

[dependencies]
apache-avro = { version = "0.16.0", optional = true }
bitvec = { version = "1.0.1", features = ["serde"] }
chrono = "0.4.38"
ciborium = { version = "0.2.2", optional = true }
clap = { version = "4.5.6", features = ["derive"] }
indicatif = "0.17.8"
log = { version = "0.4.22", features = ["std"] }
nalgebra = "0.33.0"
rand = "0.8.5"
rustc-hash = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-pickle = { version = "1.1.1", optional = true }
serde_json = { version = "1.0.118", optional = true }
shuffle = "0.1.7"
statrs = "0.16.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }

[profile.release]
debug = true

[dev-dependencies]
ciborium = "0.2.2"
tempfile = "3.10.1"
test-log = "0.2.16"

[features]
serialization = ["serde_json", "serde-pickle", "apache-avro", "ciborium"]

[[bin]]
name = "fekan"
required-features = ["serialization"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(no_simd)',
    'cfg(portable)',
] }
